유튜브 리스트 추가
( 아구이뽀 채널 예시 )

--- a/BlackTube/app/src/main/AndroidManifest.xml
+++ b/BlackTube/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.hs.dgsw.donghyeon.blacktube">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".widget.BlackTubeApplication"
         android:allowBackup="true"
