--- a/BlackTube/app/build.gradle
+++ b/BlackTube/app/build.gradle
@@ -42,10 +42,28 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "com.google.dagger:hilt-android:${rootProject.daggerHilt}"
-    kapt "com.google.dagger:hilt-android-compiler:${rootProject.daggerHilt}"
+    implementation "com.google.dagger:hilt-android:$rootProject.daggerHilt"
+    kapt "com.google.dagger:hilt-android-compiler:$rootProject.daggerHilt"
+
+    implementation "com.google.code.gson:gson:$rootProject.gson"
+
+    implementation "com.github.bumptech.glide:glide:$rootProject.glide"
+    annotationProcessor "com.github.bumptech.glide:compiler:$rootProject.glide"
+
+    // rxjava2 & rxandroid
+    implementation "io.reactivex.rxjava2:rxandroid:$rootProject.rxAndroid"
+    implementation "io.reactivex.rxjava2:rxjava:$rootProject.rxJava2"
+    implementation "com.jakewharton.rxbinding3:rxbinding:$rootProject.rxBinding"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$rootProject.rxRetrofitAdapter"
+
+    // retrofit2
+    implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit2"
+    implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2"
+
+
 }
