--- a/BlackTube/build.gradle
+++ b/BlackTube/build.gradle
@@ -2,7 +2,16 @@
 buildscript {
 
     ext {
-        daggerHilt = "2.28-alpha"
+        daggerHilt = "2.36"
+        gson = "2.8.7"
+        glide = "4.12.0"
+
+        rxAndroid = "2.1.1"
+        rxJava2 = "2.2.19"
+        rxBinding = "3.1.0"
+        rxRetrofitAdapter = "2.9.0"
+
+        retrofit2 = "2.9.0"
     }
 
     repositories {
