--- a/BlackTube/build.gradle
+++ b/BlackTube/build.gradle
@@ -19,7 +19,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-alpha15"
+        classpath 'com.android.tools.build:gradle:7.1.0-alpha02'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
         classpath "com.google.dagger:hilt-android-gradle-plugin:${daggerHilt}"
         // NOTE: Do not place your application dependencies here; they belong
