--- a/BlackTube/build.gradle
+++ b/BlackTube/build.gradle
@@ -19,8 +19,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-alpha02'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
+        classpath 'com.android.tools.build:gradle:7.1.0-alpha03'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
         classpath "com.google.dagger:hilt-android-gradle-plugin:${daggerHilt}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
