--- a/BlackTube/app/build.gradle
+++ b/BlackTube/app/build.gradle
@@ -7,14 +7,14 @@ plugins {
 }
 
 android {
-    compileSdk 30
+    compileSdk 33
     buildToolsVersion "30.0.3"
 
 
     defaultConfig {
         applicationId "kr.hs.dgsw.donghyeon.blacktube"
-        minSdk 24
-        targetSdk 30
+        minSdk 26
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -41,16 +41,16 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.5.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.3.5'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation "com.google.dagger:hilt-android:$rootProject.daggerHilt"
     kapt "com.google.dagger:hilt-android-compiler:$rootProject.daggerHilt"
@@ -69,6 +69,8 @@ dependencies {
     // retrofit2
     implementation "com.squareup.retrofit2:retrofit:$rootProject.retrofit2"
     implementation "com.squareup.retrofit2:converter-gson:$rootProject.retrofit2"
+
+    implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:11.1.0'
 
 
 }
