--- a/BlackTube/app/src/main/AndroidManifest.xml
+++ b/BlackTube/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="kr.hs.dgsw.donghyeon.blacktube">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name=".widget.BlackTubeApplication"
@@ -13,7 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BlackTube">
         <activity
-            android:name=".view.MainActivity"
+            android:name=".view.activites.VideoActivity"
+            android:exported="true"
+            android:configChanges="orientation|screenSize|keyboardHidden|smallestScreenSize|screenLayout"
+            android:supportsPictureInPicture="true" />
+        <activity
+            android:name=".view.activites.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
