--- a/BlackTube/build.gradle
+++ b/BlackTube/build.gradle
@@ -1,8 +1,7 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-
     ext {
-        daggerHilt = "2.36"
+        daggerHilt = '2.45'
         gson = "2.8.7"
         glide = "4.12.0"
 
@@ -19,8 +18,8 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.1.0-alpha03'
-        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.10'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.10'
+        classpath 'com.android.tools.build:gradle:7.2.2'
         classpath "com.google.dagger:hilt-android-gradle-plugin:${daggerHilt}"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
